--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=7.1.0"
+    "php": ">=7.1.0",
+    "symfony/routing": "4.4.x-dev",
+    "symfony/http-foundation": "4.4.x-dev",
+    "symfony/config": "4.4.x-dev"
   },
   "autoload": {
     "psr-4": {
