--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": ">=7.1.0",
     "symfony/routing": "4.4.x-dev",
     "symfony/http-foundation": "4.4.x-dev",
-    "symfony/config": "4.4.x-dev"
+    "symfony/config": "4.4.x-dev",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
