--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "symfony/routing": "4.4.x-dev",
     "symfony/http-foundation": "4.4.x-dev",
     "symfony/config": "4.4.x-dev",
-    "ext-json": "*"
+    "ext-json": "*",
+    "doctrine/dbal": "2.9.x-dev"
   },
   "autoload": {
     "psr-4": {
